# rest

./: .env.tauri  .prettierrc.json  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
.next/dev/server/app/: page.js  page_client-reference-manifest.js
.next/dev/static/chunks/: 034c8_react-icons_fa_index_mjs_85c8e839._.js  034c8_react-icons_fa_index_mjs_85c8e839._.js.map  034c8_react-icons_io_index_mjs_bd0e8816._.js  034c8_react-icons_io_index_mjs_bd0e8816._.js.map  034c8_react-icons_lib_45326482._.js  034c8_react-icons_lib_45326482._.js.map  034c8_react-icons_md_index_mjs_71c251ec._.js.map  243b6_next_dist_85407b7c._.js.map  243b6_next_dist_client_15f10f3f._.js  243b6_next_dist_client_15f10f3f._.js.map  (+35 more)
.next/dev/types/: routes.d.ts  validator.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src/app/: layout.tsx
src/components/: Dropdown.tsx  MenuItem.tsx  WindowButtons.tsx
src/context/: EnvContext.tsx
src/helpers/: settings.ts
src/libs/: document.ts
src/services/: appService.ts  constants.ts  environment.ts  nativeAppService.ts  webAppService.ts
src/store/: bookDataStore.ts  readerStore.ts  themeStore.ts  trafficLightStore.ts
src/styles/: fonts.ts  globals.css  themes.ts
src/types/: book.ts  system.ts  tinycolor2.d.ts
src/utils/: book.ts  font.ts  misc.ts  window.ts
(+44 files in other folders)
